[BACKEND] - some fixes in product init persistence